genson-cli/tests/snapshots/wrapping__map_of_record_values__avro_wrapped.snap
---
source: genson-cli/tests/wrapping.rs
expression: avro_wrapped_str
---
{
  "type": "record",
  "name": "document",
  "namespace": "genson",
  "fields": [
    {
      "name": "document",
      "type": {
        "type": "map",
        "values": {
          "type": "record",
          "name": "document_extensions",
          "namespace": "genson",
          "fields": [
            {
              "name": "en",
              "type": {
                "type": "record",
                "name": "en",
                "namespace": "genson.document_extensions_types",
                "fields": [
                  {
                    "name": "language",
                    "type": "string"
                  },
                  {
                    "name": "value",
                    "type": "string"
                  }
                ]
              }
            },
            {
              "name": "fr",
              "type": {
                "type": "record",
                "name": "fr",
                "namespace": "genson.document_extensions_types",
                "fields": [
                  {
                    "name": "language",
                    "type": "string"
                  },
                  {
                    "name": "value",
                    "type": "string"
                  }
                ]
              }
            },
            {
              "name": "rn",
              "type": [
                "null",
                {
                  "type": "record",
                  "name": "rn",
                  "namespace": "genson.document_extensions_types",
                  "fields": [
                    {
                      "name": "language",
                      "type": "string"
                    },
                    {
                      "name": "value",
                      "type": "string"
                    }
                  ]
                }
              ]
            }
          ]
        },
        "name": "document"
      }
    }
  ]
}
